--- a/index.html
+++ b/index.html
@@ -146,8 +146,13 @@
             </div>
         </div>
     </section>
-    <footer>
-
-    </footer>
+    <div class="modal">
+        <div class="imgBox">
+            <img class="img" src="./images/htmlLogo.png" alt="">
+        </div>
+        <button class="btnClose">
+            <i class="xi-close"></i>
+        </button>
+    </div>
 </body>
 </html>
