--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
                             <div class="images">
                                 <ul>
                                     <li><img src="./images/figmaLogo.png" alt=""></li>
+                                    <li><img src="./images/figma.png" alt=""></li>
                                     <li><img src="./images/githubLogo.png" alt=""></li>
                                     <li><img src="./images/javaLogo.png" alt=""></li>
                                     <li class="android"><img src="./images/androidStudioLogo.png" alt=""></li>
@@ -154,5 +155,27 @@
             <i class="xi-close"></i>
         </button>
     </div>
+    <footer>
+        <address>
+            <ul>
+                <li>
+                    <p class="address">
+                        <span>Address</span> 서울시 종로구
+                    </p>
+                </li>
+                <li>
+                    <p class="phone">
+                        <span>PhoneNum</span> 010-1234-5678
+                    </p>
+                </li>
+                <li>
+                    <p class="email">
+                        <span>E-mail</span> sunnysideup0w0@gmail.com
+                    </p>
+                </li>
+            </ul>
+        </address>
+        <p class="copyright">Copyright 2020. sunnysideup0w0 all rights reserved.</p>
+    </footer>
 </body>
 </html>
