--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/responsive.css">
     <script defer src="./index.js"></script>
 </head>
 <body>
@@ -16,7 +17,7 @@
             <ul class="gnbList">
                 <li><a href="" class="depth01">MAIN</a></li>
                 <li><a href="" class="depth01">ABOUT</a></li>
-                <li><a href="" class="depth01">SKILLS</a></li>
+                <li><a href="./game.html" class="depth01">PortFolio</a></li>
                 <li><a href="" class="depth01">CONTACT</a></li>
             </ul>
         </nav>
@@ -33,6 +34,7 @@
                 the 13th generation
             </p>
         </div>
+        <span class="mouse"></span>
         <span class="scroll">SCROLL</span>
     </section>
     <section id="about">
