카드게임 제작 및 업로드
.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul class="gnbList">
                 <li><a href="" class="depth01">MAIN</a></li>
                 <li><a href="" class="depth01">ABOUT</a></li>
-                <li><a href="./game.html" class="depth01">PortFolio</a></li>
+                <li><a href="./cardGame.html" class="depth01">PortFolio</a></li>
                 <li><a href="" class="depth01">CONTACT</a></li>
             </ul>
         </nav>
